# Qt6QML

./: README.md
01_Introduction/DemoApp/: CMakeLists.txt  Main.qml  main.cpp
02_DissectingQmlSyntax/ExploringDataTypes/: CMakeLists.txt  Main.qml  main.cpp
02_DissectingQmlSyntax/PropertyBinding/: CMakeLists.txt  Main.qml  main.cpp
02_DissectingQmlSyntax/PropertyHandlers/: CMakeLists.txt  Main.qml  main.cpp
02_DissectingQmlSyntax/QtGlobalObject/: CMakeLists.txt  Main.qml  main.cpp
02_DissectingQmlSyntax/SyntaxOverview/: CMakeLists.txt  Main.qml  main.cpp
03_BasicElements/CustomComponent/: CMakeLists.txt  qml.qrc
03_BasicElements/CustomComponent/modules/Controls/: CMakeLists.txt
03_BasicElements/CustomComponent/modules/Controls/qml/: CustomButton.qml  CustomComboBox.qml  CustomSwitch.qml  CustomTextField.qml
03_BasicElements/CustomComponent/modules/Style/: CMakeLists.txt
03_BasicElements/CustomComponent/modules/Style/qml/: FontStyle.qml
03_BasicElements/CustomComponent/qml/: Main.qml
03_BasicElements/CustomComponent/src/: main.cpp
03_BasicElements/CustomComponents/: CMakeLists.txt  Main.qml  main.cpp
03_BasicElements/Image/: CMakeLists.txt  Main.qml  main.cpp
03_BasicElements/RectangleItemText/: CMakeLists.txt  Main.qml  main.cpp
Project/CustomControls/: CMakeLists.txt
Project/CustomControls/Controls/: qml.qrc  qmldir
Project/CustomControls/Controls/Qml/: CusConfig.qml
Project/CustomControls/Controls/Qml/Basic/: BasicText.qml  BasicTooltip.qml  CusCallLater.qml  MoveArea.qml  RoundRectangle.qml  RoundRectangleShape.qml  TransArea.qml
Project/CustomControls/Controls/Qml/CusBackground/: CusBackground.qml
Project/CustomControls/Controls/Qml/CusButton/: CusButton.qml  CusButton_Blue.qml  CusButton_Gradient.qml  CusButton_Image.qml  CusButton_ImageBackground.qml  CusButton_ImageColorOverlay.qml  CusButton_Red.qml  CusButton_White.qml  CusRadioButton.qml  CusRoundTabButton.qml  CusTextButton.qml
Project/CustomControls/Controls/Qml/CusCheckBox/: CusCheckBox.qml  CusSwitch.qml
Project/CustomControls/Controls/Qml/CusComboBox/: CusComboBox.qml
Project/CustomControls/Controls/Qml/CusImage/: CusImage.qml  CusImageOverlay.qml  CusImage_Tip.qml
Project/CustomControls/Controls/Qml/CusInput/: CusIPAddress.qml  CusTextField.qml  CusTextField_Btn.qml  CusTextField_Search.qml  CusTextField_Valid.qml  CusTextInput.qml
Project/CustomControls/Examples/: CMakeLists.txt
Project/CustomControls/Examples/Example01/: CMakeLists.txt  Image.qrc  main.cpp
Project/CustomControls/Examples/Example01/qml/: main.qml
Project/QmlExam/: CMakeLists.txt
Project/QmlExam/Controls/: Controls.qrc  qmldir
Project/QmlExam/Controls/Qml/: CusConfig.qml
Project/QmlExam/Controls/Qml/Basic/: BasicText.qml  RoundRectangle.qml  RoundRectangleShape.qml  TransArea.qml
Project/QmlExam/Controls/Qml/CusButton/: CusButton_ImageBackground.qml  CusButton_ImageColorOverlay.qml  CusRoundTabButton.qml  CusTextButton.qml
Project/QmlExam/Examples/: CMakeLists.txt
Project/QmlExam/Examples/Example1/: CMakeLists.txt
Project/QmlExam/Examples/Example1/qml/: Main.qml
Project/QmlExam/Examples/Example1/src/: main.cpp
Project/QtSmartHome/: CMakeLists.txt
Project/QtSmartHome/GUI/: CMakeLists.txt  app.qrc  application.cpp  application.h  main.cpp  main.qml
Project/QtSmartHome/GUI/Components/: ActualValueSlider.qml  Cloud.qml  Devider.qml  FanStack.qml  ForeCastView.qml  MainMenu.qml  MainScreen.qml  SHText.qml  SlideSwitch.qml  TemperatureScale.qml  TemperatureSlider.qml  TemperatureView.qml  Titlebar.qml  WeatherGod.qml  WeatherGodScreen.qml  WeatherItem.qml  WeatherView.qml  WindSlider.qml
Project/QtSmartHome/GUI/Components/models/: HardwareModels.qml
Project/QtSmartHome/GUI/Components/settings/: HeatingSettings.qml  HeatingSettingsTab.qml  JalousieSettings.qml  JalousieTemperatureTab.qml  JalousieWindTab.qml  LightSettings.qml  LightSettingsTab.qml  SettingsItem.qml  TabPage.qml  TimePickerTab.qml  WindowRainTab.qml  WindowSettings.qml  WindowWindTab.qml
Project/QtSmartHome/GUI/Components/tabwidget/: HTabBar.qml  TabWidget.qml  VTabBar.qml
Project/QtSmartHome/SmartHome/: mymodule.qrc  qmldir
Project/QtSmartHome/SmartHome/Qml/bufferedgraph/: BufferedGraph.qml
Project/QtSmartHome/SmartHome/Qml/buttons/: ButtonGroup.qml  FiveWayButton.qml  SimpleButton.qml  TabButton.qml  TextButton.qml
Project/QtSmartHome/SmartHome/Qml/dropdown/: DropDownMenu.qml
Project/QtSmartHome/SmartHome/Qml/gauges/: BasicGauge.qml  Gauge.qml
Project/QtSmartHome/SmartHome/Qml/graph/: Graph.qml
Project/QtSmartHome/SmartHome/Qml/slider/: MultiSlider.qml  SimpleSlider.qml  Slider.qml
Project/QtSmartHome/SmartHome/Qml/switches/: OnOffSwitch.qml  SlideSwitch.qml
Project/QtSmartHome/SmartHome/Qml/tabwidget/: HTabBar.qml  TabPage.qml  TabWidget.qml  VTabBar.qml
Project/QtSmartHome/SmartHome/Qml/timepicker/: PickerPathView.qml  TimePicker.qml
Project/QtSmartHome/SmartHome/Qml/valuesetter/: ScrollDial.qml  ScrollWheel.qml
Project/SmartHomeApp/: CMakeLists.txt  CMakeLists.txt.user.12100e0
Project/SmartHomeApp/Components/: qmldir
Project/SmartHomeApp/Components/Qml/: CCTVTile.qml  CircularSlider.qml  EffectButton.qml  IconImage.qml  LightingTile.qml  MiddlePaneWidget.qml  OutlinedLabel.qml  PrefsLabelSelector.qml  PrefsProgressBar.qml  PrefsSlider.qml  PrefsSwitch.qml  PrefsTabButton.qml  Tile.qml  TimeShow.qml
Project/SmartHomeApp/GUI/: CMakeLists.txt  application.cpp  fpstext.h  main.cpp
Project/SmartHomeApp/GUI/Qml/: app.qrc
Project/SmartHomeApp/GUI/Qml/main/: main.qml  mainArea.qml
Project/SmartHomeApp/GUI/Qml/models/: CCTVModel.qml  LightingModel.qml
Project/SmartHomeApp/GUI/Qml/screens/: AirConditioner.qml  Bedroom.qml  CCTV.qml  Communications.qml  Dashboard.qml  Home.qml  Kitchen.qml  Laundary.qml  Lighting.qml  Security.qml  Settings.qml
Project/SmartHomeApp/SmartHome/: qmldir
Project/SmartHomeApp/SmartHome/Qml/: CCTVTile.qml  LeftPane.qml  PrefsTabButton.qml  RightPane.qml  RightPaneLightSwitchComponent.qml  Style.qml  Tile.qml
(+58 files in other folders)
